--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development --watch",
-    "devrun": "live-server",
+    "devrun": "live-server ./client/compiled",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,5 +14,10 @@
     "ocanvas": "^2.10.0",
     "webpack": "^5.47.0",
     "webpack-cli": "^4.7.2"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2"
   }
 }
